# Internet_shop

./: .env.example  .gitignore  README.md  catalog_fixture.json  pyproject.toml  requirements.txt
base_templates/: base.html  inc_navbar.html
blog/: admin.py  models.py  urls.py  views.py
blog/fixtures/: blog_fixture.json
blog/migrations/: 0001_initial.py  0002_rename_blog_article.py  0003_alter_article_id.py
blog/templates/blog/: article_confirm_delete.html  article_detail.html  article_form.html  article_list.html  base.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/fixtures/: catalog_fixture.json
catalog/management/commands/: add_test_products.py  add_test_products_fixture.py
catalog/migrations/: 0001_initial.py  0002_alter_category_description_alter_product_description_and_more.py  0002_product_views_count.py  0003_alter_category_options_alter_product_options_and_more.py  0003_alter_product_options_product_published.py  0004_contact.py  0004_rename_published_product_publish.py  0005_alter_contact_address.py  0005_remove_product_publish_product_published.py  0006_product_owner.py  0007_category_slug.py  0008_alter_category_slug.py
catalog/templates/: base.html  contacts.html  create_product.html  home.html  product_detail.html  product_list.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/fixtures/: users_fixture.json
users/migrations/: 0001_initial.py  0002_user_token.py
users/templates/: login.html
(+29 files in other folders)
