[tool.poetry]
name = "internet-shop"
version = "0.1.0"
description = ""
authors = ["Ivan Glushenkov <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^6.0.3"
python-dotenv = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
