[tool.poetry]
name = "internet-shop"
version = "0.1.0"
description = ""
authors = ["Ivan Glushenkov <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^6.0.3"
python-dotenv = "^1.2.2"


[tool.poetry.group.lint.dependencies]
isort = "^8.0.1"
black = "^26.3.1"
flake8 = "^7.3.0"
mypy = "^1.19.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 119
exclude = ".git"

[tool.isort]
line_length = 119
force_single_line = true

[tool.mypy]
disallow_untyped_defs=true
warn_return_any=true
exclude = "venv"